Pi getting hibernate+quarkus to build, but some choices debatable?